<resources>
	<string name="app_name">DroidStackMk2</string>
	<string name="default_view_title">All Activity</string>
	<string name="action_menu_settings">Settings</string>
	<string name="action_menu_refresh">Refresh</string>
	<string name="action_menu_search">Search</string>
	<string name="action_menu_changelog">Change log</string>
	<string name="drawer_open">Open navigation drawer</string>
	<string name="drawer_close">Close navigation drawer</string>
	<string name="app_label">Search</string>
	<string name="search_hint">Search StackExchange Sites</string>
	<string name="drawer_sample_txt">Drawer Sample Text</string>
	<string name="emptyDrawerList">No Site(s) found.</string>
	<string name="SEUserId_default">SE User ID</string>
	<string name="SEUserRep_fmt">Reputation: %1$s</string>
	<string name="SEUserRep_default">Reputation: 99999</string>
	<string name="SEUserBadge_default">Badges:</string>
	<string name="SEUserBadgeCount_default">99</string>
	<string name="SEUserPickerDlgTitle_default">Selected Site</string>
	<string name="SEUserPickerDlgText_default">Please enter the numeric user id indicating your appropriate site&quot;s account</string>
	<string name="SEUserPickerDlgUserIdHint">StackExchange User Id</string>
	<string name="SEUserPickerDlgButtonSubmit">Submit</string>
	<string name="rest_api_site_so_selected">
	    <![CDATA[
	    {"items":[{"badge_counts":{"bronze":61,"silver":25,"gold":2},"account_id":71316,"is_employee":false,"last_modified_date":1390550548,"last_access_date":1392229164,"reputation_change_year":305,"reputation_change_quarter":305,"reputation_change_month":65,"reputation_change_week":0,"reputation_change_day":0,"reputation":20099,"creation_date":1257710086,"user_type":"registered","user_id":206367,"accept_rate":93,"website_url":"","link":"http://stackoverflow.com/users/206367/t0mm13b","display_name":"t0mm13b","profile_image":"https://www.gravatar.com/avatar/121b360a4d7d20be6e220dcdb555649f?s=128&d=identicon&r=PG"}],"has_more":false,"quota_max":300,"quota_remaining":299}
	    ]]></string>
	<string name="rest_api_site_so_associated_acc">
	    <![CDATA[
	    {"items":[{"badge_counts":{"bronze":61,"silver":25,"gold":2},"question_count":19,"answer_count":1212,"last_access_date":1392229164,"creation_date":1257710086,"account_id":71316,"reputation":20099,"user_id":206367,"site_url":"http://stackoverflow.com","site_name":"Stack Overflow"},{"badge_counts":{"bronze":6,"silver":1,"gold":0},"question_count":0,"answer_count":9,"last_access_date":1375994607,"creation_date":1258819802,"account_id":71316,"reputation":188,"user_id":26863,"site_url":"http://serverfault.com","site_name":"Server Fault"},{"badge_counts":{"bronze":10,"silver":4,"gold":0},"question_count":3,"answer_count":37,"last_access_date":1392123130,"creation_date":1258119728,"account_id":71316,"reputation":553,"user_id":17896,"site_url":"http://superuser.com","site_name":"Super User"},{"badge_counts":{"bronze":8,"silver":2,"gold":0},"question_count":9,"answer_count":1,"last_access_date":1391995716,"creation_date":1259454231,"account_id":71316,"reputation":380,"user_id":139628,"site_url":"http://meta.stackoverflow.com","site_name":"Meta Stack Overflow"},{"badge_counts":{"bronze":1,"silver":0,"gold":0},"question_count":0,"answer_count":0,"last_access_date":1386584598,"creation_date":1281006767,"account_id":71316,"reputation":101,"user_id":3661,"site_url":"http://webapps.stackexchange.com","site_name":"Web Applications Stack Exchange"},{"badge_counts":{"bronze":1,"silver":0,"gold":0},"question_count":0,"answer_count":0,"last_access_date":1357272382,"creation_date":1281006836,"account_id":71316,"reputation":101,"user_id":1459,"site_url":"http://gamedev.stackexchange.com","site_name":"Game Development Stack Exchange"},{"badge_counts":{"bronze":2,"silver":0,"gold":0},"question_count":0,"answer_count":1,"last_access_date":1281011399,"creation_date":1281006508,"account_id":71316,"reputation":101,"user_id":412,"site_url":"http://diy.stackexchange.com","site_name":"Home Improvement Stack Exchange"},{"badge_counts":{"bronze":1,"silver":0,"gold":0},"question_count":0,"answer_count":0,"last_access_date":1388865437,"creation_date":1381916259,"account_id":71316,"reputation":101,"user_id":203211,"site_url":"http://askubuntu.com","site_name":"Ask Ubuntu"},{"badge_counts":{"bronze":3,"silver":0,"gold":0},"question_count":0,"answer_count":0,"last_access_date":1391436981,"creation_date":1283865081,"account_id":71316,"reputation":101,"user_id":3228,"site_url":"http://stackapps.com","site_name":"Stack Apps"},{"badge_counts":{"bronze":2,"silver":0,"gold":0},"question_count":0,"answer_count":0,"last_access_date":1373471646,"creation_date":1304554275,"account_id":71316,"reputation":101,"user_id":7219,"site_url":"http://unix.stackexchange.com","site_name":"Unix &amp; Linux Stack Exchange"},{"badge_counts":{"bronze":1,"silver":0,"gold":0},"question_count":0,"answer_count":0,"last_access_date":1385672690,"creation_date":1349910186,"account_id":71316,"reputation":101,"user_id":31652,"site_url":"http://apple.stackexchange.com","site_name":"Ask Different"},{"badge_counts":{"bronze":1,"silver":0,"gold":0},"question_count":0,"answer_count":0,"last_access_date":1381708133,"creation_date":1307711626,"account_id":71316,"reputation":101,"user_id":27480,"site_url":"http://programmers.stackexchange.com","site_name":"Programmers Stack Exchange"},{"badge_counts":{"bronze":41,"silver":19,"gold":1},"question_count":1,"answer_count":309,"last_access_date":1392237769,"creation_date":1301610921,"account_id":71316,"reputation":9868,"user_id":4003,"site_url":"http://android.stackexchange.com","site_name":"Android Enthusiasts Stack Exchange"},{"badge_counts":{"bronze":1,"silver":0,"gold":0},"question_count":0,"answer_count":0,"last_access_date":1389963895,"creation_date":1389919114,"account_id":71316,"reputation":101,"user_id":14906,"site_url":"http://codegolf.stackexchange.com","site_name":"Programming Puzzles &amp; Code Golf Stack Exchange"},{"badge_counts":{"bronze":4,"silver":0,"gold":0},"question_count":1,"answer_count":0,"last_access_date":1348362822,"creation_date":1348164110,"account_id":71316,"reputation":141,"user_id":521,"site_url":"http://patents.stackexchange.com","site_name":"Ask Patents"}],"has_more":false,"quota_max":300,"quota_remaining":297}
	    ]]></string>
	<string name="qli_DefaultTagTitle">Tag</string>
	<string name="qli_DefaultCountTitle">1</string>
	<string name="qli_DefaultQuestionTitle">Some question here that is of interest to SE users</string>
</resources>