<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:droidstackmk2="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_menu_search"
        android:orderInCategory="100"
        droidstackmk2:showAsAction="ifRoom|collapseActionView" 
        droidstackmk2:actionViewClass="android.support.v7.widget.SearchView" />
    
    <item android:id="@+id/menu_refresh"
         android:icon="@drawable/ic_action_refresh"
         android:title="@string/action_menu_refresh"
         android:orderInCategory="101"
         droidstackmk2:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_settings"
        android:title="@string/action_menu_settings"
        android:orderInCategory="102"
        droidstackmk2:showAsAction="never"/>
    
    <item
        android:id="@+id/menu_changelog"
        android:title="@string/action_menu_changelog"
        android:orderInCategory="103"
        droidstackmk2:showAsAction="never" />

</menu>
