<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:gravity="center">

	<RelativeLayout android:id="@+id/relDrawrUsrPickrHeader"
		android:layout_width="match_parent" android:layout_height="wrap_content">
		<ImageView android:id="@+id/ivDrwrSelectdSite"
			android:layout_width="48dp" android:layout_height="48dp"
			android:padding="5dp" android:src="@drawable/ic_stub" />
		<TextView android:id="@+id/tvDrawrUsrPickrSelectdSite"
			android:layout_width="match_parent" android:layout_height="wrap_content"
			android:layout_toRightOf="@+id/ivDrwrSelectdSite"
			android:layout_centerVertical="true" android:text="@string/SEUserPickerDlgTitle_default"
			android:textAppearance="?android:attr/textAppearanceLarge" />
	</RelativeLayout>
	<RelativeLayout android:id="@+id/relDrawrUsrPickrBody"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:layout_below="@+id/relDrawrUsrPickrHeader">
		<TextView android:id="@+id/tvDrawrUsrPickrSiteHint"
			android:layout_width="match_parent" android:layout_height="wrap_content"
			android:text="@string/SEUserPickerDlgText_default"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_margin="10dp" />
		<EditText android:id="@+id/etDrawrUsrPickrAccNbr"
			android:layout_width="match_parent" android:layout_height="wrap_content"
			android:layout_below="@+id/tvDrawrUsrPickrSiteHint" android:hint="@string/SEUserPickerDlgUserIdHint"
			android:inputType="number" android:maxLength="8" android:padding="5dp"
			android:layout_margin="25dp">
			<requestFocus />
		</EditText>
	</RelativeLayout>
	<RelativeLayout android:id="@+id/relDrawrUsrPickrFooter"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:layout_below="@+id/relDrawrUsrPickrBody">
		<Button android:id="@+id/btnDrawrUsrPickrSubmit" android:layout_width="match_parent"
			android:layout_height="wrap_content" android:text="@string/SEUserPickerDlgButtonSubmit"
			android:layout_margin="5dp" />
	</RelativeLayout>
</RelativeLayout>
